# mass_events

./: Cargo.toml  LICENSE  README.md
mass_events_process_runner/: Cargo.toml
mass_events_process_runner/SQL/: core.sql
mass_events_process_runner/src/: main.rs
mass_events_process_runner/src/app_state/: mod.rs
mass_events_process_runner/src/configuration/: mod.rs
mass_events_process_runner/src/controller/: mod.rs  process_controller.rs  queue_controller.rs
mass_events_process_runner/src/models/: process.rs  queue.rs
mass_events_process_runner/src/open_api/: mod.rs
mass_events_process_runner/src/service/: mod.rs  process_service.rs  queue_service.rs
mass_events_process_runner/src/templates/sql/: create_queue_template.rs  delete_queue_template.rs  mod.rs
mass_events_process_runner/src/utils/: db_utils.rs
mass_events_process_runner/templates/: create_queue.sql.template  delete_queue.sql.template
mass_events_process_runner_client/: Cargo.toml
mass_events_process_runner_client/examples/: test_client.rs
mass_events_process_runner_client/src/: lib.rs
mass_events_process_runner_models/: Cargo.toml
mass_events_process_runner_models/src/: lib.rs  process.rs  queue.rs
mass_events_schedular/: .env  Cargo.toml
mass_events_schedular/migrations/: 20231129113314_init.sql
mass_events_schedular/src/: lib.rs  main.rs
mass_events_schedular/src/app_state/: mod.rs
mass_events_schedular/src/controller/: mod.rs
mass_events_schedular/src/entities/: scheduler_entity.rs
mass_events_schedular/src/service/: scheduler_service.rs
mass_events_schedular/src/utils/: mod.rs
mass_events_scheduler/: Cargo.toml
mass_events_scheduler/src/: lib.rs  main.rs
mass_events_scheduler/src/app_state/: mod.rs
mass_events_scheduler/src/configuration/: mod.rs
mass_events_scheduler/src/controller/: scheduler_controller.rs
mass_events_scheduler/src/entities/: mod.rs  scheduler_entity.rs
mass_events_scheduler/src/models/: mod.rs  robot_status.rs
mass_events_scheduler/src/open_api/: mod.rs
mass_events_scheduler/src/service/: mod.rs  scheduler_error.rs  scheduler_service.rs
mass_events_scheduler/src/utils/: mod.rs
mass_events_utils/: Cargo.toml
mass_events_utils/src/: db_utils.rs  lib.rs  return_utils.rs
mass_events_worker/: Cargo.toml
mass_events_worker/src/: main.rs
mass_events_worker/src/configuration/: mod.rs
migrations/: 20231003074558_init.sql
