[package]
name = "mass_events_process_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0", features = [
    "tokio",
    "tower-log",
    "query",
    "json",
    "macros",
] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json ={ workspace = true }
serde_yml = "0"
serde_merge = "0"
utoipa = {workspace = true }
utoipa-swagger-ui = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tower-http = { version = "0", features = ["add-extension", "trace"] }
askama = "0"

# mass_events_commons
mass_events_utils = {path = "../mass_events_utils"}
mass_events_process_runner_models = {path = "../mass_events_process_runner_models"}