[package]
name = "mass_events_process_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = "0"
serde_merge = "0"
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
clap ={ workspace = true }
tower-http = { workspace = true }
askama = "0"

# mass_events_commons
mass_events_utils = { path = "../mass_events_utils" }
mass_events_process_runner_models = { path = "../mass_events_process_runner_models" }