[package]
name = "mass_events_process_runner_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

# mass_events_commons
mass_events_process_runner_models = {path = "../mass_events_process_runner_models"}

