[package]
name = "mass_events_process_runner_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

# mass_events_commons
mass_events_process_runner_models = { path = "../mass_events_process_runner_models" }

