[package]
name = "mass_events_process_runner_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "4", features = [
    "chrono",
    "uuid",
    "openapi_extensions",
] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "chrono",
    "migrate",
    "macros",
    "uuid",
] }

# mass_events_commons
mass_events_utils = {path = "../mass_events_utils"}