[package]
name = "mass_events_process_runner_models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
sqlx = { workspace = true }

# mass_events_commons
mass_events_utils = {path = "../mass_events_utils"}