[package]
name = "mass_events_scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0", features = [
    "tokio",
    "tower-log",
    "query",
    "json",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0"
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { workspace = true}
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
serde_merge = "0"
chrono = { version = "0.4", features = ["serde"] }
cron = { version = "0" }
utoipa = { workspace = true}
utoipa-swagger-ui = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tokio-cron-scheduler = { version = "0", features = ["signal", "has_bytes"] }
tower-http = { version = "0", features = ["add-extension", "trace"] }

# mass_events_commons
mass_events_process_runner_client = { path = "../mass_events_process_runner_client" }