[package]
name = "mass_events_scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0"
serde_merge = "0"
chrono = { workspace = true }
cron = { version = "0" }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
clap = { workspace = true }
tokio-cron-scheduler = { version = "0", features = ["signal", "has_bytes"] }
tower-http = { workspace = true }

# mass_events_commons
mass_events_process_runner_client = { path = "../mass_events_process_runner_client" }