[package]
name = "mass_events_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4" }

# mass_events_commons
mass_events_process_runner_client = { path = "../mass_events_process_runner_client" }
