[package]
name = "mass_events_worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }

# mass_events_commons
mass_events_process_runner_client = { path = "../mass_events_process_runner_client" }
